--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "classnames": "^2.2.6",
     "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.20.2",
+    "locomotive-scroll": "^3.3.11",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
