--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.20.2",
     "locomotive-scroll": "^3.3.11",
+    "lodash.debounce": "^4.0.8",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
