--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "stylelint": "^13.3.2",
     "stylelint-order": "^4.0.0"
