--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "eslint-plugin-import": "^2.20.2",
     "locomotive-scroll": "^3.3.11",
     "lodash.debounce": "^4.0.8",
+    "lottie-web": "^5.6.10",
     "matter-js": "^0.14.2",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-lottie": "^1.2.3",
     "react-responsive": "^8.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
